fix form spacing

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -156,6 +156,7 @@ a {
   flex-direction: column;
   align-items: center;
   max-width: 1120px;
+  width: 100%;
 }
 
 .shop-categories {
